bynkc/tests/fixtures/negative/304_http_unknown_handler_annotation/src/api.bynk
context api

type View = { ok: Bool }

service api from http {
  @frobnicate(x: 1)
  on GET("/items") () -> Effect[HttpResult[View]] by Visitor {
    Ok(View { ok: true })
  }
}
